@@ -14,13 +14,13 @@ setup(
     license=meta.license,
     packages=dist.findPackages(meta.library_name),
     long_description=dist.catReST(
-        "docs/PRELUDE.txt",
-        "README",
-        "docs/DEPENDENCIES.txt",
-        "docs/INSTALL.txt",
-        "docs/USAGE.txt",
+        "docs/PRELUDE.rst",
+        "README.rst",
+        "docs/DEPENDENCIES.rst",
+        "docs/INSTALL.rst",
+        "docs/USAGE.rst",
         "TODO",
-        "docs/HISTORY.txt",
+        "docs/HISTORY.rst",
         stop_on_errors=True,
         out=True),
     classifiers=[
